[package]
name = "xsmt"
version = "1.0.0"
authors = ["A great fucker"]
edition = "2021"
license = "MIT"
repository = "https://github.com/haxjump/xsmt"
description = "Sparse merkle tree implement in rust"
exclude = ["/proptest-regressions"]

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "0.1"
blake3 = "1.3.1"

[dev-dependencies]
proptest = "0.9"
criterion = "0.2"
rand = "0.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "smt_benchmark"
harness = false
