[package]
name = "xsmt"
version = "2.0.0"
authors = []
edition = "2021"
license = "MIT"
repository = "https://github.com/haxjump/xsmt"
description = "Sparse merkle tree implement in rust"
keywords = ["smt", "sparse_merkle_tree", "mpt", "merkle", "sparse"]
exclude = ["/proptest-regressions"]

[dependencies]
blake3 = "1.3.1"
serde = { version = "1.0.137", features = ["derive"] }
ruc = "1.0"
vsdb = "0.35.3"

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.3", features = [ "html_reports" ] }
rand = "0.8"
hex = "0.4.3"
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "smt_benchmark"
harness = false
