[package]
name = "xsmt"
version = "3.0.7"
authors = ["mlm"]
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/rust-util-collections/xSMT"
description = "Sparse merkle tree implement in rust"
keywords = ["smt", "sparse_merkle_tree", "mpt", "merkle", "sparse"]
exclude = ["/proptest-regressions"]

[dependencies]
blake3 = "1.3.1"
serde = { version = "1.0.137", features = ["derive"] }
ruc = "1.0"
# vsdb = { path = "../vsdb/wrappers" }
vsdb = "0.43.2"

pt11 = { package = "primitive-types", version = "0.11" }
pt10 = { package = "primitive-types", version = "0.10" }

[dev-dependencies]
proptest = "1.0"
criterion = { version = "0.3", features = [ "html_reports" ] }
rand = "0.8"
hex = "0.4.3"
serde_json = "1.0"
anyhow = "1.0"
pprof = { version = "0.8.0", default-features = false, features = ["flamegraph"] }

[[bench]]
name = "smt_benchmark"
harness = false
